Add support to invite people in your network via UI.
1. Can click on send invite to send an invite.
2. Can send Merit to people via alias with validation.

--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -576,7 +576,7 @@ background-color: rgb(232, 179, 54);</string>
            </layout>
           </item>
           <item>
-           <widget class="QListView" name="listRequests">
+           <widget class="QListView" name="listNetwork">
             <property name="styleSheet">
              <string notr="true">QListView { background: transparent; }</string>
             </property>
