--- a/src/qt/forms/modaloverlay.ui
+++ b/src/qt/forms/modaloverlay.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>385</height>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -115,7 +115,7 @@ QLabel { color: rgb(40,40,40);  }</string>
               </font>
              </property>
              <property name="text">
-              <string>Progress</string>
+              <string>Download Progress</string>
              </property>
             </widget>
            </item>
