--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -170,6 +170,20 @@ background-color: rgb(232, 179, 54);</string>
               </property>
              </spacer>
             </item>
+            <item>
+             <widget class="QLabel" name="aliasLabel">
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
           <item>
