update sync overlay icon to hourglass

--- a/src/qt/forms/modaloverlay.ui
+++ b/src/qt/forms/modaloverlay.ui
@@ -251,8 +251,8 @@ QLabel { color: rgb(40,40,40);  }</string>
                </property>
                <property name="icon">
                 <iconset>
-                 <normaloff>:/icons/warning</normaloff>
-                 <disabledoff>:/icons/warning</disabledoff>:/icons/warning</iconset>
+                 <normaloff>:/icons/hourglass</normaloff>
+                 <disabledoff>:/icons/hourglass</disabledoff>:/icons/hourglass</iconset>
                </property>
                <property name="iconSize">
                 <size>
