--- a/src/qt/merit.qrc
+++ b/src/qt/merit.qrc
@@ -1,58 +1,59 @@
 <RCC>
     <qresource prefix="/icons">
-        <file alias="merit">res/icons/merit.png</file>
+        <file alias="about">res/icons/about.png</file>
+        <file alias="about_qt">res/icons/about_qt.png</file>
+        <file alias="add">res/icons/add.png</file>
         <file alias="address-book">res/icons/address-book.png</file>
-        <file alias="quit">res/icons/quit.png</file>
-        <file alias="send">res/icons/send.png</file>
         <file alias="connect_0">res/icons/connect0.png</file>
         <file alias="connect_1">res/icons/connect1.png</file>
         <file alias="connect_2">res/icons/connect2.png</file>
         <file alias="connect_3">res/icons/connect3.png</file>
         <file alias="connect_4">res/icons/connect4.png</file>
+        <file alias="debugwindow">res/icons/debugwindow.png</file>
+        <file alias="edit">res/icons/edit.png</file>
+        <file alias="editcopy">res/icons/editcopy.png</file>
+        <file alias="editpaste">res/icons/editpaste.png</file>
+        <file alias="export">res/icons/export.png</file>
+        <file alias="eye">res/icons/eye.png</file>
+        <file alias="eye_minus">res/icons/eye_minus.png</file>
+        <file alias="eye_plus">res/icons/eye_plus.png</file>
+        <file alias="filesave">res/icons/filesave.png</file>
+        <file alias="fontbigger">res/icons/fontbigger.png</file>
+        <file alias="fontsmaller">res/icons/fontsmaller.png</file>
+        <file alias="hd_disabled">res/icons/hd_disabled.png</file>
+        <file alias="hd_enabled">res/icons/hd_enabled.png</file>
+        <file alias="history">res/icons/history.png</file>
+        <file alias="hourglass">res/icons/hourglass.png</file>
+        <file alias="info">res/icons/info.png</file>
+        <file alias="key">res/icons/key.png</file>
+        <file alias="lock_closed">res/icons/lock_closed.png</file>
+        <file alias="lock_open">res/icons/lock_open.png</file>
+        <file alias="merit">res/icons/merit.png</file>
+        <file alias="network_disabled">res/icons/network_disabled.png</file>
+        <file alias="open">res/icons/open.png</file>
+        <file alias="options">res/icons/configure.png</file>
+        <file alias="overview">res/icons/overview.png</file>
+        <file alias="prompticon">res/icons/chevron.png</file>
+        <file alias="quit">res/icons/quit.png</file>
+        <file alias="receiving_addresses">res/icons/receive.png</file>
+        <file alias="remove">res/icons/remove.png</file>
+        <file alias="send">res/icons/send.png</file>
+        <file alias="synced">res/icons/synced.png</file>
         <file alias="transaction_0">res/icons/transaction0.png</file>
-        <file alias="transaction_confirmed">res/icons/transaction2.png</file>
-        <file alias="transaction_conflicted">res/icons/transaction_conflicted.png</file>
         <file alias="transaction_1">res/icons/clock1.png</file>
         <file alias="transaction_2">res/icons/clock2.png</file>
         <file alias="transaction_3">res/icons/clock3.png</file>
         <file alias="transaction_4">res/icons/clock4.png</file>
         <file alias="transaction_5">res/icons/clock5.png</file>
-        <file alias="eye">res/icons/eye.png</file>
-        <file alias="eye_minus">res/icons/eye_minus.png</file>
-        <file alias="eye_plus">res/icons/eye_plus.png</file>
-        <file alias="options">res/icons/configure.png</file>
-        <file alias="receiving_addresses">res/icons/receive.png</file>
-        <file alias="editpaste">res/icons/editpaste.png</file>
-        <file alias="editcopy">res/icons/editcopy.png</file>
-        <file alias="add">res/icons/add.png</file>
-        <file alias="edit">res/icons/edit.png</file>
-        <file alias="history">res/icons/history.png</file>
-        <file alias="overview">res/icons/overview.png</file>
-        <file alias="export">res/icons/export.png</file>
-        <file alias="synced">res/icons/synced.png</file>
-        <file alias="remove">res/icons/remove.png</file>
-        <file alias="tx_mined">res/icons/tx_mined.png</file>
-        <file alias="tx_input">res/icons/tx_input.png</file>
-        <file alias="tx_output">res/icons/tx_output.png</file>
+        <file alias="transaction_abandoned">res/icons/transaction_abandoned.png</file>
+        <file alias="transaction_confirmed">res/icons/transaction2.png</file>
+        <file alias="transaction_conflicted">res/icons/transaction_conflicted.png</file>
         <file alias="tx_inout">res/icons/tx_inout.png</file>
-        <file alias="lock_closed">res/icons/lock_closed.png</file>
-        <file alias="lock_open">res/icons/lock_open.png</file>
-        <file alias="key">res/icons/key.png</file>
-        <file alias="filesave">res/icons/filesave.png</file>
-        <file alias="debugwindow">res/icons/debugwindow.png</file>
-        <file alias="open">res/icons/open.png</file>
-        <file alias="info">res/icons/info.png</file>
-        <file alias="about">res/icons/about.png</file>
-        <file alias="about_qt">res/icons/about_qt.png</file>
+        <file alias="tx_input">res/icons/tx_input.png</file>
+        <file alias="tx_mined">res/icons/tx_mined.png</file>
+        <file alias="tx_output">res/icons/tx_output.png</file>
         <file alias="verify">res/icons/verify.png</file>
         <file alias="warning">res/icons/warning.png</file>
-        <file alias="fontbigger">res/icons/fontbigger.png</file>
-        <file alias="fontsmaller">res/icons/fontsmaller.png</file>
-        <file alias="prompticon">res/icons/chevron.png</file>
-        <file alias="transaction_abandoned">res/icons/transaction_abandoned.png</file>
-        <file alias="hd_enabled">res/icons/hd_enabled.png</file>
-        <file alias="hd_disabled">res/icons/hd_disabled.png</file>
-        <file alias="network_disabled">res/icons/network_disabled.png</file>
         <file>res/icons/warning-colored.png</file>
     </qresource>
     <qresource prefix="/movies">
