--- a/src/qt/merit.qrc
+++ b/src/qt/merit.qrc
@@ -39,6 +39,7 @@
         <file alias="remove">res/icons/remove.png</file>
         <file alias="send">res/icons/send.png</file>
         <file alias="synced">res/icons/synced.png</file>
+        <file alias="spread">res/icons/spread.png</file>
         <file alias="transaction_0">res/icons/transaction0.png</file>
         <file alias="transaction_1">res/icons/clock1.png</file>
         <file alias="transaction_2">res/icons/clock2.png</file>
